// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField  snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="city"
              >
                City
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                    id="city"
                    name="city"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField  snapshot 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 evYMFd"
                id="city"
                label="City"
                name="city"
                value=""
              />
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TextInputField  snapshot 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="zip_code"
              >
                Zip code
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                    id="zip_code"
                    name="zip_code"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
